# artisanflow

./: .env.example  pyproject.toml  render.yaml  vercel.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/hooks/: useApi.ts  useLang.ts
frontend/src/pages/: AITools.tsx  Artisans.tsx  Buyers.tsx  Dashboard.tsx  Fulfillment.tsx  Insights.tsx  Orders.tsx  Products.tsx  Quality.tsx  Shipments.tsx  Subscriptions.tsx
src/artisanflow/: __init__.py  ai.py  api.py  cli.py  database.py  demo_data.py  models.py  research.py  store.py
